
Package org.springframework.omx.xstream
* fixed #SWS-100: Cannot set DateConverter in XStreamMarshaller.setConverters(Converter[])

Package org.springframework.ws.client.core
* replaced method which returned a Source from WebServiceTemplate with SourceExtractor methods, because the Source
  could be closed before returned. 

Package org.springframework.ws.server.endpoint
* added XPathPayloadEndpointMapping (#SWS-85).

Package org.springframework.ws.soap.saaj
* fixed #SWS-87: AbstractSoapMessage.getPayloadSource returns null with Axis SAAJ

Package org.springframework.ws.soap.security.xwss.callback
* DefaultTimestapValidator now handles timestamps with milliseconds correctly (#SWS-89)

Package org.springframework.ws.transport
* fixed #SWS-86: Stream closed before response read with WebServiceTemplate + Axis SAAJ Soap Messages

Package org.springframework.ws.transport.http
* fixed issue with reading response HTTP headers

Package org.springframework.ws.wsdl.wsdl11.builder
* fixed #SWS-101: XsdBasedSoap11Wsdl4jDefinitionBuilder parsing error

Package org.springframework.xml.stream
* prefixed all abstract classes with Abstract

Samples
* fixed #SWS-93: new location for log4j.properties

Changes in version 1.0-M3
-------------------------
Package org.springframework.oxm.castor
* fixed #SWS-70: AbstractMarshallerTestCase.testMarshalDOMResult() builds a DOM object that does not retain namespace

Package org.springframework.oxm.castor
* CastorMarshaller uses a XMLClassDescriptorResolver instead of a Mapping (#SWS-54)
* CastorMarshaller marshals to DOM trees correctly (#SWS-59)

Package org.springframework.oxm.jibx
* added indent property to pretty print JiBX output (#SWS-72)

Package org.springframework.ws
* moved MessageDispatcher, EndpointAdapter, EndpointExceptionResolver, EndpointInterceptor, EndpointMapping, and
  EndpointInvocationChain to org.springframework.ws.server package

Package org.springframework.ws.client